# openlogi-plus

./: .gitignore  CHANGELOG.md  Cargo.toml  FIXDRY.md  README.md
.github/workflows/: ci.yml  crowdin.yml  release-plz.yml  release.yml  windows-sign-dryrun.yml
crates/openlogi-agent/: Cargo.toml
crates/openlogi-agent-core/src/: bindings.rs  hook_runtime.rs  lib.rs  orchestrator.rs  receiver_access.rs
crates/openlogi-agent-core/src/watchers/: gesture.rs
crates/openlogi-agent/src/: launch_agent.rs  main.rs  pairing.rs  self_restart.rs  status_item.rs  takeover.rs  tray.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-core/: Cargo.toml
crates/openlogi-core/src/: binding.rs  brand.rs  config.rs  diagnostics.rs  paths.rs
crates/openlogi-gui/: Cargo.toml  build.rs
crates/openlogi-gui/locales/: app.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  ja.yml  ko.yml  nb.yml  nl.yml  pl.yml  pt-BR.yml  pt-PT.yml  ru.yml  sv.yml  zh-CN.yml  zh-HK.yml  zh-TW.yml
crates/openlogi-gui/src/: app.rs  app_assets.rs  app_menu.rs  app_watcher.rs  diagnostics.rs  i18n.rs  launch_agent.rs  main.rs  single_instance.rs  state.rs  theme.rs
crates/openlogi-gui/src/asset/: mod.rs
crates/openlogi-gui/src/components/: device_carousel.rs  dpi_panel.rs  smartshift_panel.rs
crates/openlogi-gui/src/mouse_model/: geometry.rs  picker.rs  view.rs
crates/openlogi-gui/src/platform/: os.rs  tray.rs  updater.rs
crates/openlogi-gui/src/state/: devices.rs
crates/openlogi-gui/themes/: openlogi.json
crates/openlogi-hid/: Cargo.toml  README.md
crates/openlogi-hid/src/: gesture.rs  inventory.rs  lib.rs  pairing.rs  reprog_controls.rs  route.rs  smartshift.rs  thumbwheel.rs  transport.rs  windows_hid.rs  write.rs
crates/openlogi-hidpp/: Cargo.toml
crates/openlogi-hidpp/src/: channel.rs  lib.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/src/: lib.rs  macos.rs  tests.rs  windows.rs
crates/openlogi-inject/: Cargo.toml
crates/optminus-hid/src/: inventory.rs
docs/: CONFIGURATION.md  DEVELOPMENT.md  FORK_CI.md
scripts/: cargo-run-macos.sh
xtask/: Cargo.toml
xtask/src/: linux.rs  macos.rs  util.rs
xtask/src/commands/release/: latest_json.rs
(+47 files in other folders)
