[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLogi repository maintenance tasks."
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
command-error = "0.8.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = "3.27.0"
time = { version = "0.3", features = ["formatting"] }
which = "8.0.4"

[lints]
workspace = true
